# graupel-2

./: LICENSE  README.md  prediction.kml  pyproject.toml
book/: _config.yml  _toc.yml  create-kml.ipynb  data-analysis.ipynb  index.md
data/: aprs.kml  flight-path.kml  prediction.kml  raw-data.csv  recorded-flight-path.kml
docs/: .buildinfo  create-kml.html  data-analysis.html  extract-gopro.ipynb  flight-path.html  flight-path.ipynb  genindex.html  index.html  index.md  launch.html  objects.inv  preamble.py  predictions.html  search.html  searchindex.js
docs/_sources/: data-analysis.ipynb  flight-path.ipynb  index.md  launch.ipynb  predictions.ipynb
workflows/: book.yml
