[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Graupel-2"
version = "0.1.0"
description = "Predictions and post-launch analysis of the Graupel-2 high altitude balloon."
authors = ["Jason Walker <ungood@onetrue.name>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
jupyter = "^1.0.0"
jupyter-book = "^0.11.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
simplekml = "^1.3.6"
filterpy = "^1.4.5"
Pint = "^0.17"
hampel = "^0.0.5"

[tool.poe.tasks]
nb = "jupyter notebook book"
jb = "jupyter-book"
build-book = [
    {"cmd" = "jupyter-book build book"},
    {"cmd" = "rm -rf docs"},
    {"cmd" = "mv book/_build/html docs"},
    {"cmd" = "touch docs/.nojekyll"}
]
build = ["build-book"]